--- a/package.json
+++ b/package.json
@@ -50,11 +50,15 @@
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "1.0.6",
     "@ai-sdk/anthropic": "^0.0.39",
+    "@ai-sdk/azure": "^1.1.11",
     "@ai-sdk/cohere": "^1.0.3",
     "@ai-sdk/deepseek": "^0.1.3",
     "@ai-sdk/google": "^0.0.52",
     "@ai-sdk/mistral": "^0.0.43",
     "@ai-sdk/openai": "^1.1.2",
+    "@azure/arm-cognitiveservices": "^7.6.0",
+    "@azure/arm-resources": "^5.2.0",
+    "@azure/identity": "^4.6.0",
     "@codemirror/autocomplete": "^6.18.3",
     "@codemirror/commands": "^6.7.1",
     "@codemirror/lang-cpp": "^6.0.2",
