--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -48,14 +48,39 @@ jobs:
             type=sha,format=short
             type=raw,value=${{ github.ref_name }},enable=${{ startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/stable' }}
 
-      - name: Build and push Docker image
+      - name: Extract metadata for Express Docker image
+        id: meta-express
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest-express,enable=${{ github.ref == 'refs/heads/main' }}
+            type=raw,value=stable-express,enable=${{ github.ref == 'refs/heads/stable' }}
+            type=ref,event=tag,suffix=-express
+            type=raw,value=${{ github.ref_name }}-express,enable=${{ startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/stable' }}
+            
+      - name: Build and push Docker image (Default)
         uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64,linux/arm64
+          target: bolt-diy-production
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          
+      
+      - name: Build and push Docker image (Express)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          target: bolt-diy-express
+          push: true
+          tags: ${{ steps.meta-express.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
       - name: Check manifest
         run: docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+      
+      - name: Check Express manifest
+        run: docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta-express.outputs.version }}
