--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ GROQ_API_KEY=
 # You only need this environment variable set if you want to use HuggingFace models
 HuggingFace_API_KEY=
 
-
+#push
 # Get your Open AI API Key by following these instructions -
 # https://help.openai.com/en/articles/4936850-where-do-i-find-my-openai-api-key
 # You only need this environment variable set if you want to use GPT models
