--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "nanostores": "^0.10.3",
     "ollama-ai-provider": "^0.15.2",
     "path-browserify": "^1.0.1",
+    "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
