--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ TOGETHER_API_KEY=
 #Get your Hyperbolics API Key at https://app.hyperbolic.xyz/settings
 #baseURL="https://api.hyperbolic.xyz/v1/chat/completions"
 HYPERBOLIC_API_KEY=
-HYPERBOLIC_API_BASE_URL= 
+HYPERBOLIC_API_BASE_URL=
 
 # Get your Mistral API Key by following these instructions -
 # https://console.mistral.ai/api-keys/
@@ -78,7 +78,7 @@ LMSTUDIO_API_BASE_URL=
 # You only need this environment variable set if you want to use xAI models
 XAI_API_KEY=
 
-# Get your Perplexity API Key here - 
+# Get your Perplexity API Key here -
 # https://www.perplexity.ai/settings/api
 # You only need this environment variable set if you want to use Perplexity models
 PERPLEXITY_API_KEY=
@@ -97,8 +97,13 @@ AWS_BEDROCK_CONFIG=
 # Include this environment variable if you want more logging for debugging locally
 VITE_LOG_LEVEL=debug
 
+# Set this to the allowed hosts for your application, separated by commas
+# Example: VITE_ALLOWED_HOSTS=localhost,127.0.0.1,myapp.com
+# Leave empty if you don't need to restrict allowed hosts
+VITE_ALLOWED_HOSTS=
+
 # Example Context Values for qwen2.5-coder:32b
-# 
+#
 # DEFAULT_NUM_CTX=32768 # Consumes 36GB of VRAM
 # DEFAULT_NUM_CTX=24576 # Consumes 32GB of VRAM
 # DEFAULT_NUM_CTX=12288 # Consumes 26GB of VRAM
