--- a/package.json
+++ b/package.json
@@ -96,6 +96,10 @@
     "dotenv": "^16.4.7",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.12.0",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-fs-backend": "^2.6.0",
+    "i18next-http-backend": "^3.0.2",
     "ignore": "^6.0.2",
     "isbot": "^4.4.0",
     "isomorphic-git": "^1.27.2",
@@ -114,6 +118,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-hotkeys-hook": "^4.6.1",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
@@ -121,6 +126,7 @@
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "remix-i18next": "^5.0.0",
     "remix-island": "^0.2.0",
     "remix-utils": "^7.7.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
