feat: Enhanced search

--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ TOGETHER_API_KEY=
 #Get your Hyperbolics API Key at https://app.hyperbolic.xyz/settings
 #baseURL="https://api.hyperbolic.xyz/v1/chat/completions"
 HYPERBOLIC_API_KEY=
-HYPERBOLIC_API_BASE_URL= 
+HYPERBOLIC_API_BASE_URL=
 
 # Get your Mistral API Key by following these instructions -
 # https://console.mistral.ai/api-keys/
@@ -94,8 +94,63 @@ PERPLEXITY_API_KEY=
 # {"region": "us-east-1", "accessKeyId": "yourAccessKeyId", "secretAccessKey": "yourSecretAccessKey", "sessionToken": "yourSessionToken"}
 AWS_BEDROCK_CONFIG=
 
+# Get your Serper.dev API key for web search functionality
+# https://serper.dev/ (offers free tier with 2,500 searches/month)
+# This API key is used for the web search feature to query Google, DuckDuckGo and academic sources
+# 
+# Alternative search providers (if preferred):
+# 1. Google Custom Search API:
+#    - Visit https://console.cloud.google.com/
+#    - Create a project and enable the Custom Search API
+#    - Generate API credentials and set up a Custom Search Engine (CSE) ID
+#    - Free tier: 100 queries/day, then pay-as-you-go
+#
+# 2. Bing Search API:
+#    - Visit https://www.microsoft.com/en-us/bing/apis/bing-web-search-api
+#    - Sign up for Microsoft Azure
+#    - Create a Bing Search resource
+#    - Free tier: 1,000 queries/month
+SERPER_API_KEY=
+
+# Bing Search API Key for web search as an alternative to Serper.dev
+# Get a key at: https://www.microsoft.com/en-us/bing/apis/bing-web-search-api
+# Offers 1,000 free searches per month through Azure
+BING_SEARCH_API_KEY=
+
+# Google Custom Search API for web search as an alternative to Serper.dev
+# Get an API key at: https://console.cloud.google.com/
+# Create a CSE ID at: https://cse.google.com/cse/all
+# Free tier: 100 queries/day, then pay-as-you-go
+GOOGLE_API_KEY=
+GOOGLE_CSE_ID=
+
+# NOTE: You can use either SERPER_API_KEY, BING_SEARCH_API_KEY, GOOGLE_API_KEY+GOOGLE_CSE_ID, or all.
+# The application will automatically select the best provider based on your query.
+# You can also use PERPLEXITY_API_KEY for integrated search (set above).
+# If no API keys are provided, the application will use a local fallback search.
+
 # Include this environment variable if you want more logging for debugging locally
 VITE_LOG_LEVEL=debug
+
+# Get your GitHub Personal Access Token here -
+# https://github.com/settings/tokens
+# This token is used for:
+# 1. Importing/cloning GitHub repositories without rate limiting
+# 2. Accessing private repositories
+# 3. Automatic GitHub authentication (no need to manually connect in the UI)
+# 
+# For classic tokens, ensure it has these scopes: repo, read:org, read:user
+# For fine-grained tokens, ensure it has Repository and Organization access
+# If you encounter a 500 Internal Server Error during clone operations, try generating a new token
+VITE_GITHUB_ACCESS_TOKEN=
+
+# Specify the type of GitHub token you're using
+# Can be 'classic' or 'fine-grained'
+# Classic tokens are recommended for broader access
+VITE_GITHUB_TOKEN_TYPE=classic
+
+# Netlify Authentication
+VITE_NETLIFY_ACCESS_TOKEN=
 
 # Example Context Values for qwen2.5-coder:32b
 # 
