--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@octokit/types": "^13.6.2",
     "@openrouter/ai-sdk-provider": "^0.0.5",
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-context-menu": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -80,6 +81,7 @@
     "@remix-run/react": "^2.15.2",
     "@tanstack/react-virtual": "^3.13.0",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-window": "^1.8.8",
     "@uiw/codemirror-theme-vscode": "^4.23.6",
     "@unocss/reset": "^0.61.9",
     "@webcontainer/api": "1.3.0-internal.10",
@@ -88,7 +90,7 @@
     "@xterm/xterm": "^5.5.0",
     "ai": "^4.1.2",
     "chalk": "^5.4.1",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
@@ -96,6 +98,7 @@
     "dotenv": "^16.4.7",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.12.0",
+    "idb": "^8.0.2",
     "ignore": "^6.0.2",
     "isbot": "^4.4.0",
     "isomorphic-git": "^1.27.2",
@@ -104,20 +107,23 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.484.0",
     "nanostores": "^0.10.3",
     "ollama-ai-provider": "^0.15.2",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-hotkeys-hook": "^4.6.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "react-toastify": "^10.0.6",
+    "react-window": "^1.8.11",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
