ci(prettier):  Add Prettier workflow and update configuration file
Add the '. Github/workflows/prettier. yml' file to automatically check code formatting during push or pull requests and fix formatting issues in PR. At the same time, update the '. pretierrc' configuration file, add the 'endOfLine' option, and create a '. gitattributes' file to unify the line break format.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -21,12 +21,12 @@ mac:
   icon: assets/icons/icon.icns
   target:
     - dmg
-  identity: "Xinzhe Wang (RDQSC33B2X)"
-  category: "public.app-category.developer-tools"
-  type: "distribution"
+  identity: 'Xinzhe Wang (RDQSC33B2X)'
+  category: 'public.app-category.developer-tools'
+  type: 'distribution'
   hardenedRuntime: true
-  entitlements: "assets/entitlements.mac.plist"
-  entitlementsInherit: "assets/entitlements.mac.plist"
+  entitlements: 'assets/entitlements.mac.plist'
+  entitlementsInherit: 'assets/entitlements.mac.plist'
   gatekeeperAssess: false
 
 win:
