docs: 更新项目描述为"StackBlitz AI Agent"
将项目描述从"An AI Agent"更改为"StackBlitz AI Agent"，以更准确地反映项目身份

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bolt",
-  "description": "An AI Agent",
+  "description": "StackBlitz AI Agent",
   "private": true,
   "license": "MIT",
   "sideEffects": false,
