feat(构建): 添加跨平台应用签名支持
引入自定义签名工具脚本，用于在Windows、macOS和Linux平台上对应用进行签名。更新electron-builder配置文件以启用签名功能，并确保构建过程中调用自定义签名脚本。

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -28,12 +28,14 @@ mac:
   entitlements: "assets/entitlements.mac.plist"
   entitlementsInherit: "assets/entitlements.mac.plist"
   gatekeeperAssess: false
+  signTool: "node scripts/custom-signature.js"
 
 win:
   icon: assets/icons/icon.ico
   target:
     - nsis
-  signDlls: false
+  signDlls: true
+  signTool: "node scripts/custom-signature.js"
   artifactName: ${name}-${version}-${os}-${arch}.${ext}
 
 linux:
@@ -43,6 +45,7 @@ linux:
     - deb
   artifactName: ${name}-${version}-${os}-${arch}.${ext}
   category: Development
+  signTool: "node scripts/custom-signature.js"
 
 nsis:
   oneClick: false
