--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "node": ">=18.18.0"
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^1.1.0",
-    "@ai-sdk/anthropic": "^0.0.43",
-    "@ai-sdk/cohere": "^1.2.2",
-    "@ai-sdk/deepseek": "^0.1.17",
-    "@ai-sdk/google": "^0.0.52",
-    "@ai-sdk/mistral": "^0.0.43",
-    "@ai-sdk/openai": "^1.3.4",
+    "@ai-sdk/amazon-bedrock": "^2.2.4",
+    "@ai-sdk/anthropic": "^1.2.5",
+    "@ai-sdk/cohere": "^1.2.4",
+    "@ai-sdk/deepseek": "^0.2.5",
+    "@ai-sdk/google": "^1.2.5",
+    "@ai-sdk/mistral": "^1.2.3",
+    "@ai-sdk/openai": "^1.3.6",
     "@codemirror/autocomplete": "^6.18.3",
     "@codemirror/commands": "^6.7.1",
     "@codemirror/lang-cpp": "^6.0.2",
@@ -78,7 +78,7 @@
     "@nanostores/react": "^0.7.3",
     "@octokit/rest": "^21.0.2",
     "@octokit/types": "^13.6.2",
-    "@openrouter/ai-sdk-provider": "^0.0.5",
+    "@openrouter/ai-sdk-provider": "^0.4.5",
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -98,6 +98,7 @@
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
     "@tanstack/react-virtual": "^3.13.0",
+    "@types/lodash": "^4.17.16",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@uiw/codemirror-theme-vscode": "^4.23.6",
     "@unocss/reset": "^0.61.9",
@@ -105,7 +106,7 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
-    "ai": "^4.2.0",
+    "ai": "^4.2.11",
     "chalk": "^5.4.1",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
@@ -126,10 +127,11 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.485.0",
     "mime": "^4.0.4",
     "nanostores": "^0.10.3",
-    "ollama-ai-provider": "^0.15.2",
+    "ollama-ai-provider": "^1.2.0",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
