--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-hotkeys-hook": "^4.6.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
